# netflix-recommender

./: .gitignore  README.md  manual_filter.py  pyproject.toml  to_truncated_table.py
utils/: __init__.py  data_index.py  io.py  updater.py
