[tool.poetry]
name = "netflix-recommender"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.10.10"
polars = "^0.17.12"
jupyter = "^1.0.0"
tensorflow = "^2.12.0"
plotly = "^5.14.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
